@@ -15,6 +15,7 @@ import com.dds.plugin.storage.bdb.BDB;
 import com.dds.plugin.storage.mongodb.MongoDB;
 import com.dds.plugin.storage.mysqldb.MySQLDB;
 import com.dds.properties.Property;
+import com.dds.replication.ReplicationHandler;
 import com.dds.utils.Helper;
 
 /**
@@ -90,6 +91,10 @@ public class StorageHandler {
 	}
 
 	public Object invoke(byte[] buffer) throws Exception {
+		
+		ReplicationHandler replicationHandler = new ReplicationHandler();
+		replicationHandler.invoke(buffer);
+		
 		String buf = (String) Helper.getObject(buffer);
 		String[] bufArray = buf.split(",");
 		String methodName = bufArray[0].trim();
@@ -101,10 +106,8 @@ public class StorageHandler {
 		try {
 			dbInterface.createConnection();
 			if (checkMethodExists(methodName)) {
-				System.out.println("Method Exists! " + methodName);
 				return invokeMethod(methodName, bufArray);
 			} else {
-				System.out.println("Method Does Not Exists! " + methodName);
 				return invokeNativeMethod(methodName, bufArray);
 			} 
 		} catch (Exception e) {
@@ -173,7 +176,7 @@ public class StorageHandler {
 			dbInterface.delete(bufArray[1]);
 			return "deleted";
 		} else if (methodName.equals("contains")) {
-			return new Boolean(dbInterface.contains(bufArray[1]));
+			return Boolean.valueOf(dbInterface.contains(bufArray[1]));
 		} else {
 			throw new StorageException("No matching method found");
 		} 
